--- a/ShapesAndroid/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/ShapesAndroid/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,22 +12,17 @@
         android:title="@string/title_explore" />
 
     <item
+        android:id="@+id/navigation_add_post"
+        android:icon="@drawable/ic_add_post"
+        android:title="@string/title_add_post"/>
+
+    <item
         android:id="@+id/navigation_people"
         android:icon="@drawable/ic_people"
         android:title="@string/title_people"/>
 
     <item
-        android:id="@+id/navigation_add"
-        android:icon="@drawable/ic_add_post"
-        android:title="@string/title_add_post"/>
-
-    <item
-        android:id="@+id/navigation_saved"
-        android:icon="@drawable/ic_save"
-        android:title="@string/title_saved" />
-
-    <item
-        android:id="@+id/navigation_###"
-        android:icon="@drawable/ic_profile"
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_user"
         android:title="@string/title_profile"/>
 </menu>
