--- a/ShapesAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ImageView
@@ -13,28 +12,6 @@
         android:layout_gravity="center"
         android:src="@mipmap/ic_logo_app"
         android:contentDescription="@string/app_logo" />
-
-    <EditText
-        android:id="@+id/Name"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/name"
-        android:inputType="text"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/Username"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/username"
-        android:inputType="text"
-        android:autofillHints="" />
 
     <EditText
         android:id="@+id/Email"
@@ -59,13 +36,13 @@
         android:autofillHints="" />
 
     <Button
-        android:id="@+id/buttonSignUp"
+        android:id="@+id/ButtonLogin"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="180dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_gravity="center"
-        android:text="@string/sign_up" />
+        android:text="@string/log_in" />
 
 </LinearLayout>
