--- a/ShapesAndroid/app/src/main/res/menu/bottom_nav_filter.xml
+++ b/ShapesAndroid/app/src/main/res/menu/bottom_nav_filter.xml
@@ -8,6 +8,7 @@
                 android:title="@string/title_profile" />
             <item
                 android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_setting"
                 android:title="@string/settings" />
             <item
                 android:id="@+id/nav_saved"
