--- a/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,13 +25,13 @@
 
     <fragment
         android:id="@+id/navigation_add_post"
-        android:name="com.example.myapplication.ui.addpost.AddPostFragment"
-        android:label="@string/title_add_post"
+        android:name="com.example.myapplication.ui.upload.UploadPostFragment"
+        android:label="@string/upload"
         tools:layout="@layout/fragment_add_post" />
 
     <fragment
-        android:id="@+id/navigation_profile"
-        android:name="com.example.myapplication.ui.profile.ProfileFragment"
-        android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        android:id="@+id/navigation_filter"
+        android:label="@string/filter"
+        android:layout="@layout/activity_filter" />
+
 </navigation>
