--- a/ShapesAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,10 +16,10 @@
 
     <EditText
         android:id="@+id/Email"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -26,10 +27,10 @@
 
     <EditText
         android:id="@+id/Password"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -44,5 +45,19 @@
         android:layout_marginEnd="20dp"
         android:layout_gravity="center"
         android:text="@string/log_in" />
+
+    <TextView
+        android:id="@+id/Register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center"
+        android:text="@string/new_account"
+        android:clickable="true"
+        android:onClick="Login_to_Register"
+        android:focusable="true" />
 
 </LinearLayout>
