--- a/ShapesAndroid/app/src/main/res/navigation/filter_navigation.xml
+++ b/ShapesAndroid/app/src/main/res/navigation/filter_navigation.xml
@@ -3,24 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_host_fragment_filter">
+    app:startDestination="@+id/nav_filter">
 
     <fragment
         android:id="@+id/navigation_setting"
-        android:icon="@drawable/ic_setting"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings"/>
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.myapplication.ui.profile.ProfileFragment"
-        android:icon="@drawable/ic_user"
         android:label="@string/title_profile"/>
 
     <fragment
         android:id="@+id/navigation_saved"
         android:name="com.example.myapplication.ui.saved.SavedFragment"
-        android:icon="@drawable/ic_saved"
         android:label="@string/title_saved"
         tools:layout="@layout/fragment_saved" />
 
@@ -28,12 +25,10 @@
         android:id="@+id/navigation_liked"
         android:name="com.example.myapplication.ui.liked.LikedFragment"
         android:label="@string/liked"
-        android:icon="@drawable/ic_liked"
         tools:layout="@layout/fragment_liked" />
 
     <fragment
         android:id="@+id/navigation_logout"
-        android:icon="@drawable/ic_logout"
         android:label="@string/logout"
         tools:layout="@layout/activity_logout" />
 
