--- a/ShapesAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_login.xml
@@ -4,60 +4,90 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/Logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="40dp"
+    <!-- Top Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_logo_app"
-        android:contentDescription="@string/app_logo" />
-
-    <EditText
-        android:id="@+id/Email"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:autofillHints="" />
+        android:layout_marginEnd="30dp">
 
-    <EditText
-        android:id="@+id/Password"
-        android:layout_width="300dp"
+        <ImageView
+            android:id="@+id/Logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:contentDescription="@string/app_logo"
+            android:src="@mipmap/ic_logo_app" />
+
+    </LinearLayout>
+
+    <!-- Center Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:autofillHints="" />
+        android:layout_marginEnd="30dp">
 
-    <Button
-        android:id="@+id/ButtonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:text="@string/log_in" />
+        <EditText
+            android:id="@+id/Email"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:autofillHints=""
+            android:hint="@string/email"
+            android:inputType="textEmailAddress" />
 
-    <TextView
-        android:id="@+id/Register"
-        android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/Password"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:autofillHints=""
+            android:hint="@string/password"
+            android:inputType="textPassword" />
+
+    </LinearLayout>
+
+    <!-- Bottom Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_gravity="center"
-        android:text="@string/new_account"
-        android:clickable="true"
-        android:onClick="Login_to_Register"
-        android:focusable="true" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp">
+
+        <Button
+            android:id="@+id/ButtonLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/log_in" />
+
+        <TextView
+            android:id="@+id/registerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="navigateToRegister"
+            android:text="@string/new_account" />
+
+    </LinearLayout>
 
 </LinearLayout>
