--- a/ShapesAndroid/app/src/main/res/layout/activity_register.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_register.xml
@@ -1,71 +1,112 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
 
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/Logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="30dp"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_logo_app"
-        android:contentDescription="@string/app_logo" />
-
-    <EditText
-        android:id="@+id/Name"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
+    <!-- Top Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/name"
-        android:inputType="text"
-        android:autofillHints="" />
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp">
 
-    <EditText
-        android:id="@+id/Username"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/username"
-        android:inputType="text"
-        android:autofillHints="" />
+        <ImageView
+            android:id="@+id/Logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_logo_app"
+            android:background="@color/white"
+            android:contentDescription="@string/app_logo" />
 
-    <EditText
-        android:id="@+id/Email"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:autofillHints="" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/Password"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:autofillHints="" />
+    <!-- Center Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp">
 
-    <Button
-        android:id="@+id/buttonSignUp"
-        android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/Name"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/name"
+            android:inputType="text"
+            android:autofillHints="" />
+
+        <EditText
+            android:id="@+id/Username"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/username"
+            android:inputType="text"
+            android:autofillHints="" />
+
+        <EditText
+            android:id="@+id/Email"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:autofillHints="" />
+
+        <EditText
+            android:id="@+id/Password"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:autofillHints="" />
+
+    </LinearLayout>
+
+    <!-- Bottom Layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_gravity="center"
-        android:text="@string/sign_up" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp">
+
+        <Button
+            android:id="@+id/buttonSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/sign_up" />
+
+        <TextView
+            android:id="@+id/loginTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/account"
+            android:clickable="true"
+            android:onClick="navigateToLogin"
+            android:focusable="true" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
