--- a/ShapesAndroid/app/src/main/res/layout/fragment_explore.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_explore.xml
@@ -5,7 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     tools:context=".ui.explore.ExploreFragment">
+
 
     <TextView
         android:id="@+id/text_Explore"
