--- a/ShapesAndroid/app/src/main/res/layout/fragment_liked.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_liked.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
