--- a/ShapesAndroid/app/src/main/res/layout/fragment_login.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".ui.login.LoginActivity">
 
     <!-- Top Layout -->
     <LinearLayout
@@ -81,6 +83,7 @@
             android:id="@+id/registerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:clickable="true"
