--- a/ShapesAndroid/app/src/main/res/layout/fragment_logout.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_logout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
-    tools:context=".ui.logout.LogoutActivity">
+    tools:context=".ui.logout.LogoutFragment">
 
     <TextView
         android:id="@+id/logout_message"
