--- a/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,36 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/nav_home">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/nav_home"
         android:name="com.example.myapplication.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_explore"
+        android:id="@+id/nav_explore"
         android:name="com.example.myapplication.ui.explore.ExploreFragment"
         android:label="@string/title_explore"
         tools:layout="@layout/fragment_explore" />
 
     <fragment
-        android:id="@+id/navigation_people"
+        android:id="@+id/nav_people"
         android:name="com.example.myapplication.ui.people.PeopleFragment"
         android:label="@string/title_people"
         tools:layout="@layout/fragment_people" />
 
     <fragment
-        android:id="@+id/navigation_add_post"
+        android:id="@+id/nav_add_post"
         android:name="com.example.myapplication.ui.upload.UploadPostFragment"
         android:label="@string/upload"
         tools:layout="@layout/fragment_add_post" />
 
-    <fragment
-        android:id="@+id/navigation_filter"
-        android:name="com.example.myapplication.ui.filter.FilterFragment"
-        android:label="@string/filter"
-        android:layout="@layout/activity_filter" />
 
 </navigation>
