--- a/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,5 +29,11 @@
         android:label="@string/upload"
         tools:layout="@layout/fragment_add_post" />
 
+    <fragment
+        android:id="@+id/nav_filter"
+        android:name="com.example.myapplication.ui.filter.FilterFragment"
+        android:label="@string/filter"
+        tools:layout="@layout/fragment_filter"/>
+
 
 </navigation>
