--- a/ShapesAndroid/app/src/main/res/layout/fragment_profile.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
     android:layout_marginBottom="16dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    tools:context=".ui.profile.ProfileFragment">
+    tools:context=".ui.profile.">
 
     <TextView
         android:id="@+id/text_profile"
@@ -19,4 +19,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
