--- a/ShapesAndroid/app/src/main/res/layout/fragment_setting.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_setting.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
     android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
     android:orientation="vertical">
 
     <!-- First pair -->
@@ -16,19 +16,19 @@
 
         <!-- Text on the left -->
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/theme1"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/theme"
-            android:gravity="center_vertical"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/theme" />
 
         <!-- Switch on the right -->
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/SwitchMode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"/>
+            android:gravity="center_vertical" />
     </LinearLayout>
 
     <!-- Second pair -->
@@ -41,17 +41,17 @@
         <TextView
             android:id="@+id/View"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/theme"
-            android:gravity="center_vertical"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/theme" />
 
         <!-- Switch on the right -->
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/Mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"/>
+            android:gravity="center_vertical" />
     </LinearLayout>
 
 </LinearLayout>
