--- a/ShapesAndroid/app/src/main/res/layout/fragment_logout.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_logout.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
-    tools:context=".ui.logout.LogoutFragment">
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/logout_message"
