--- a/ShapesAndroid/app/src/main/res/layout/fragment_add_post.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_add_post.xml
@@ -14,6 +14,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+
         android:orientation="vertical"
         tools:context=".ui.upload.AddPostFragment">
 
@@ -32,6 +37,7 @@
         android:layout_height="300dp"
         android:src="@drawable/ic_upload"
         android:contentDescription="@string/upload"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +45,7 @@
         android:layout_gravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAddPost"
+        android:id="@+id/AddPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
