--- a/ShapesAndroid/app/src/main/res/layout/fragment_setting.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_setting.xml
@@ -8,7 +8,24 @@
     android:layout_marginBottom="16dp"
     android:orientation="vertical">
 
-    <!-- First pair -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
+
+        <ImageView
+            android:id="@+id/button_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:contentDescription="@string/back"
+            android:focusable="true"
+            android:src="@drawable/ic_back"
+            android:clickable="true"
+            android:onClick="Back" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
