--- a/ShapesAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_login.xml
@@ -44,18 +44,26 @@
         <EditText
             android:id="@+id/Email"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:autofillHints=""
+            android:textSize="20sp"
             android:hint="@string/email"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:background="@drawable/listview_border_glow"/>
 
         <EditText
             android:id="@+id/Password"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:autofillHints=""
+            android:textSize="20sp"
             android:hint="@string/password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:background="@drawable/listview_border_glow" />
 
     </LinearLayout>
 
@@ -77,7 +85,8 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/log_in" />
+            android:text="@string/log_in"
+            android:background="@drawable/button_border"/>
 
         <TextView
             android:id="@+id/registerTextView"
