--- a/ShapesAndroid/app/src/main/res/layout/activity_register.xml
+++ b/ShapesAndroid/app/src/main/res/layout/activity_register.xml
@@ -28,14 +28,16 @@
     </LinearLayout>
 
     <!-- Center Layout -->
+
+    <!-- Bottom Layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp">
+        android:layout_marginEnd="30dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/Name"
@@ -43,9 +45,11 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:autofillHints=""
+            android:background="@drawable/listview_border_glow"
             android:hint="@string/name"
             android:inputType="text"
-            android:autofillHints="" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Username"
@@ -53,9 +57,11 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:autofillHints=""
+            android:background="@drawable/listview_border_glow"
             android:hint="@string/username"
             android:inputType="text"
-            android:autofillHints="" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Email"
@@ -63,9 +69,11 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:autofillHints=""
+            android:background="@drawable/listview_border_glow"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:autofillHints="" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Password"
@@ -73,13 +81,14 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:autofillHints=""
+            android:background="@drawable/listview_border_glow"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:autofillHints="" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
-    <!-- Bottom Layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -95,7 +104,8 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/sign_up" />
+            android:text="@string/sign_up"
+            android:background="@drawable/button_border"/>
 
         <TextView
             android:id="@+id/loginTextView"
