--- a/ShapesAndroid/app/src/main/res/layout/fragment_post.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_post.xml
@@ -1,27 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical"
-	android:padding="16dp">
+	app:cardCornerRadius="16dp"
+	android:layout_margin="4dp"
+	app:cardElevation="4dp"
+	app:cardUseCompatPadding="true">
 
-	<!-- Post title or content -->
-	<TextView
-		android:id="@+id/textViewPostContent"
+
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:textSize="16sp"
-		android:textColor="@color/black"
-		android:text="Post content goes here" />
+		android:orientation="vertical">
 
-	<ImageView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:textSize="18sp"
+			android:textStyle="bold"
+			android:gravity="start"
+			android:layout_weight="1"
+			android:id="@+id/tvProfile"
+			android:layout_margin="5dp"
+			android:text="@string/username"
+			app:drawableStartCompat="@drawable/ic_profile"/>
 
-		
-	</ImageView>
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:textSize="20sp"
+			android:layout_marginRight="15dp"
+			android:layout_marginLeft="15dp"
+			android:id="@+id/tvDescription"
+			android:text="Some description..."
+			android:layout_marginBottom="6dp"/>
 
-	<!-- Add more TextViews or ImageViews here for additional post data -->
-	<!-- For example, author name, date, image preview, etc. -->
+		<ImageView
+			android:layout_width="match_parent"
+			android:layout_height="320dp"
+			android:id="@+id/ivPostImage"
+			android:scaleType="centerCrop"
+			android:src="@drawable/ic_loader"/>
 
-</LinearLayout>
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			android:layout_marginTop="10dp"
+			android:layout_marginBottom="10dp"
+			android:layout_marginRight="10dp"
+			android:layout_marginLeft="10dp">
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="18sp"
+				android:textStyle="bold"
+				android:gravity="center"
+				android:layout_weight="1"
+				android:id="@+id/tvLikes"
+				android:layout_margin="5dp"
+				android:text="@string/likes"
+				app:drawableStartCompat="@drawable/ic_like" />
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="18sp"
+				android:textStyle="bold"
+				android:gravity="center"
+				android:layout_weight="1"
+				android:id="@+id/tvSaved"
+				android:layout_margin="5dp"
+				android:text="@string/saved"
+				app:drawableStartCompat="@drawable/ic_save" />
+
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="18sp"
+				android:textStyle="bold"
+				android:gravity="center"
+				android:layout_margin="5dp"
+				android:layout_weight="1"
+				android:id="@+id/tvShare"
+				android:text="@string/share"
+				app:drawableStartCompat="@drawable/ic_share" />
+		</LinearLayout>
+	</LinearLayout>
+
+</androidx.cardview.widget.CardView>
+
