--- a/ShapesAndroid/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/ShapesAndroid/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,22 +4,22 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="@string/title_home" />
+        android:title="@string/home" />
 
     <item
         android:id="@+id/nav_explore"
         android:icon="@drawable/ic_explore"
-        android:title="@string/title_explore" />
+        android:title="@string/explore" />
 
     <item
         android:id="@+id/nav_add_post"
         android:icon="@drawable/ic_add_post"
-        android:title="@string/title_add_post"/>
+        android:title="@string/post"/>
 
     <item
         android:id="@+id/nav_people"
         android:icon="@drawable/ic_people"
-        android:title="@string/title_people"/>
+        android:title="@string/people"/>
 
     <item
         android:id="@+id/nav_filter"
