--- a/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ShapesAndroid/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,19 +8,19 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.myapplication.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_explore"
         android:name="com.example.myapplication.ui.explore.ExploreFragment"
-        android:label="@string/title_explore"
+        android:label="@string/explore"
         tools:layout="@layout/fragment_explore" />
 
     <fragment
         android:id="@+id/nav_people"
         android:name="com.example.myapplication.ui.people.PeopleFragment"
-        android:label="@string/title_people"
+        android:label="@string/people"
         tools:layout="@layout/fragment_people" />
 
     <fragment
