--- a/ShapesAndroid/app/src/main/res/values/colors.xml
+++ b/ShapesAndroid/app/src/main/res/values/colors.xml
@@ -7,4 +7,47 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#FF9E9E9E</color>
+    <color name="blue">#FF2196F3</color>
+    <color name="red">#FFEB5757</color>
+    <color name="green">#FF4CAF50</color>
+    <color name="yellow">#FFFFC107</color>
+    <color name="orange">#FFFF9800</color>
+    <color name="purple">#FF9C27B0</color>
+    <color name="teal">#FF009688</color>
+    <color name="brown">#FF795548</color>
+    <color name="grey">#FF9E9E9E</color>
+    <color name="blueGrey">#FF607D8B</color>
+    <color name="amber">#FFFFC107</color>
+    <color name="cyan">#FF00BCD4</color>
+    <color name="indigo">#FF3F51B5</color>
+    <color name="lightGreen">#FF8BC34A</color>
+    <color name="lightBlue">#FF64B5F6</color>
+    <color name="lightGrey">#FFBDBDBD</color>
+    <color name="darkBlue">#FF0D47A1</color>
+    <color name="darkGreen">#FF00897B</color>
+    <color name="darkGrey">#FF616161</color>
+    <color name="darkIndigo">#FF303F9F</color>
+    <color name="darkCyan">#FF0097A7</color>
+    <color name="darkAmber">#FF575700</color>
+    <color name="darkRed">#FFB71C1C</color>
+    <color name="darkBrown">#FF5D4037</color>
+    <color name="darkGray">#FF424242</color>
+    <color name="darkBlueGrey">#FF607D8B</color>
+    <color name="darkTeal">#FF00897B</color>
+    <color name="darkOrange">#FFFF8F00</color>
+    <color name="darkPurple">#FF7B1FA2</color>
+
+
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="ColorDark">#353332</color>
+    <color name="NoColor">#00ffffff</color>
+    <color name="Red">#C50C12</color>
+    <color name="DarkRed">#810004</color>
+    <color name="blank">#ffffff</color>
+    <color name="colorX">#6D38B5</color>
+    <color name="cardview_dark_background">#424242</color>
 </resources>
