--- a/ShapesAndroid/app/src/main/res/layout/fragment_home.xml
+++ b/ShapesAndroid/app/src/main/res/layout/fragment_home.xml
@@ -9,8 +9,9 @@
 
 	<!-- Add RecyclerView to display posts -->
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/recyclerView"
+		android:id="@+id/recyclerViewPosts"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="match_parent"/>
+
 
 </LinearLayout>
