--- a/ShapesAndroid/app/src/main/res/layout/item_post.xml
+++ b/ShapesAndroid/app/src/main/res/layout/item_post.xml
@@ -22,7 +22,7 @@
 			android:textStyle="bold"
 			android:gravity="start"
 			android:layout_weight="1"
-			android:id="@+id/tvProfile"
+			android:id="@+id/tvUsername"
 			android:layout_margin="5dp"
 			android:text="@string/username"
 			app:drawableStartCompat="@drawable/ic_profile"/>
